--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
 }
 .left{
     color: #989
+    margin-right: 20px;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
