--- a/main.css
+++ b/main.css
@@ -1,47 +1,267 @@
-body {
-    margin: 60px auto;
-    width: 70%;
+*{
+    margin: 0%;
+    padding: 0%;
 }
-.left{
-    color: #989
-    margin-right: 50px;
+body{
+    background-color: black;
+    color: white;
+    /* font-family: 'Comforter Brush', cursive; */
+    font-style: italic;
+    font-size: 20px;
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
+
+#bar{
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    border: 2px solid black;
+    background-color: rgb(44, 47, 49);
+    border-radius: 30px;
+    margin: 10px 10px;
+    padding: 5px 5px;
+    position: sticky;
+    top: 2px;
+    
+}
+
+.head{
     list-style: none;
-    font-weight: bold;
+    margin: 10px 10px;
+    padding: 5px 5px;
+    transition: all 1s ease-in 0s;
+
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
+.head:hover{
+    box-shadow: inset 0px 0px 0px 100px rgb(15, 11, 4);
+    border-radius: 20px;
 }
-a {
+
+a{
     text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    color: white;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+body::before{
+    content: "";
+    position: absolute;
+    top:2px;
+    background: url('img3.jpg') no-repeat center center/cover;
+    z-index: -1;
+    opacity: 0.2;
+    height: 1300px;
+    width: 100%;
 }
 
-ul.posts li {
+#profile{
+    margin: 40px 0px 0px 0px;
+
+}
+
+#p1{
+    border: 2px solid black;
+    background-color: blueviolet;
+    padding: 12px;
+    margin: 0px 800px 0px 0px;
+    border-radius: 0px 20px 20px 0px;
+    
+}
+#name{
+    font-size: 50px;
+}
+#work{
+    font-size: 30px;
+}
+#info{
+    margin: 20px 0px 0px 100px;
+}
+
+#s1{
+    padding: 12px;
+    font-size: 40px;
+    margin: 40px 800px 0px 0px;
+    background-color: blueviolet;
+    border-radius: 0px 20px 20px 0px;
+}
+
+#s2{
+    margin: 20px 0px 0px 100px;
     list-style: none;
+
+}
+
+#e1{
+    padding: 12px;
+    font-size: 40px;
+    background-color: blueviolet;
+    border-radius: 0px 20px 20px 0px;
+    margin: 40px 800px 0px 0px;
+}
+
+#e2{
+    margin: 20px 0px 0px 100px;
+    
+}
+
+#a1{
+    padding: 12px;
+    font-size: 40px;
+    margin: 40px 800px 0px 0px;
+    background-color: blueviolet;
+    border-radius: 0px 20px 20px 0px;
+}
+
+#a2{
+    margin: 20px 0px 0px 100px;
+}
+
+#c1{
+    padding: 12px;
+    font-size: 40px;
+    margin: 40px 800px 0px 0px;
+    background-color: blueviolet;
+    border-radius: 0px 20px 20px 0px;
+
+}
+
+#c2{
+    margin: 20px 0px 0px 100px;
+    
+}
+#foot{
+    /* border: 2px solid wheat;  */
+    position: relative;
+    top: 5px;
+    text-align: center;
+}
+
+/* #change1{
+    animation-name: change1;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: backwards;
+    animation-timing-function: ease-in-out;
+}
+
+#change2{
+    animation-name: change2;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: backwards;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes change1 {
+    0%{
+        opacity: 0;
+    }
+    25%{
+        opacity: 0;
+    }   
+    50%{
+        
+        opacity: 1;
+    }
+    75%{
+        opacity: 1;
+        
+    }
+    100%{
+        opacity: 1;
+
+    }
+}
+@keyframes change2 {
+    0%{
+        opacity: 1;
+    }
+    25%{
+        opacity: 1;
+    }   
+    50%{
+        
+        position: relative;
+        right: 50px;
+        opacity: 0;
+    }
+    75%{
+        opacity: 0;
+        right: 50px;
+        position: relative;
+        
+    }
+    100%{
+        opacity: 0;
+        right: 50px;
+        position: relative;
+        
+    }
+} */
+
+@media (min-width:1000px) and (max-width:1120px){
+    
+    #s1,#e1,#a1,#c1{
+        font-size: 30px;
+    }
+    #name{
+        font-size: 40px;
+    }
+    #work{
+        font-size: 25px;
+    }
+    #a1{
+        margin: 40px 750px 0px 0px;
+    }
+    #p1{
+        margin: 40px 700px 0px 0px;
+    }
+}
+@media (min-width:950px) and (max-width:1000px){
+    
+    #s1,#e1,#a1,#c1{
+        font-size: 25px;
+    }
+    #name{
+        font-size: 35px;
+    }
+    #work{
+        font-size: 20px;
+    }
+    #a1{
+        margin: 40px 740px 0px 0px;
+    }
+    #p1{
+        margin: 40px 600px 0px 0px;
+    }
+    #e1{
+        margin: 40px 800px 0px 0px;
+    }
+    #s1{
+        margin: 40px 850px 0px 0px;
+        
+    }
+}
+@media (min-width:900px) and (max-width:950px){
+    
+    #s1,#e1,#a1,#c1{
+        font-size: 25px;
+    }
+    #name{
+        font-size: 35px;
+    }
+    #work{
+        font-size: 20px;
+    }
+    #a1{
+        margin: 40px 740px 0px 0px;
+    }
+    #p1{
+        margin: 40px 1000000px 0px 0px;
+    }
+    #e1{
+        margin: 40px 800px 0px 0px;
+    }
+    #s1{
+        margin: 40px 800px 0px 0px;
+        
+    }
 }
