--- a/css/main.css
+++ b/css/main.css
@@ -3,265 +3,584 @@
     padding: 0%;
 }
 body{
-    background-color: black;
-    color: white;
-    /* font-family: 'Comforter Brush', cursive; */
-    font-style: italic;
-    font-size: 20px;
-}
-
-#bar{
-    display: flex;
-    justify-content:flex-start;
-    align-items: center;
-    border: 2px solid black;
-    background-color: rgb(44, 47, 49);
-    border-radius: 30px;
-    margin: 10px 10px;
-    padding: 5px 5px;
-    position: sticky;
-    top: 2px;
-    
-}
-
-.head{
-    list-style: none;
-    margin: 10px 10px;
-    padding: 5px 5px;
-    transition: all 1s ease-in 0s;
-
-}
-.head:hover{
-    box-shadow: inset 0px 0px 0px 100px rgb(15, 11, 4);
-    border-radius: 20px;
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-
-body::before{
-    content: "";
-    position: absolute;
-    top:2px;
-    background: url('img3.jpg') no-repeat center center/cover;
-    z-index: -1;
-    opacity: 0.2;
-    height: 1300px;
-    width: 100%;
-}
-
-#profile{
-    margin: 40px 0px 0px 0px;
-
-}
-
-#p1{
-    border: 2px solid black;
-    background-color: blueviolet;
-    padding: 12px;
-    margin: 0px 800px 0px 0px;
-    border-radius: 0px 20px 20px 0px;
-    
-}
-#name{
-    font-size: 50px;
-}
-#work{
-    font-size: 30px;
+    background-color: rgb(136, 136, 187);
+    font-family: 'Akaya Telivigala', cursive;
+    font-size: 40px;
+    box-sizing: border-box;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 #info{
-    margin: 20px 0px 0px 100px;
+    margin: 200px 500px 0px 100px;
 }
-
-#s1{
-    padding: 12px;
-    font-size: 40px;
-    margin: 40px 800px 0px 0px;
-    background-color: blueviolet;
-    border-radius: 0px 20px 20px 0px;
-}
-
-#s2{
-    margin: 20px 0px 0px 100px;
-    list-style: none;
-
-}
-
-#e1{
-    padding: 12px;
-    font-size: 40px;
-    background-color: blueviolet;
-    border-radius: 0px 20px 20px 0px;
-    margin: 40px 800px 0px 0px;
-}
-
-#e2{
-    margin: 20px 0px 0px 100px;
-    
-}
-
-#a1{
-    padding: 12px;
-    font-size: 40px;
-    margin: 40px 800px 0px 0px;
-    background-color: blueviolet;
-    border-radius: 0px 20px 20px 0px;
-}
-
-#a2{
-    margin: 20px 0px 0px 100px;
-}
-
-#c1{
-    padding: 12px;
-    font-size: 40px;
-    margin: 40px 800px 0px 0px;
-    background-color: blueviolet;
-    border-radius: 0px 20px 20px 0px;
-
-}
-
-#c2{
-    margin: 20px 0px 0px 100px;
-    
-}
-#foot{
-    /* border: 2px solid wheat;  */
+#circle{
+    border: 1px solid white;
+    width: 100px;
+    height: 100px;
+    padding: 100px;
+    background-color: rgb(136, 136, 187);
+    border-radius: 100%;
     position: relative;
-    top: 5px;
-    text-align: center;
+    left: 800px;
+    bottom: 280px;
 }
-
-/* #change1{
-    animation-name: change1;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
-    animation-timing-function: ease-in-out;
-}
-
-#change2{
-    animation-name: change2;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
-    animation-timing-function: ease-in-out;
-}
-
-@keyframes change1 {
-    0%{
-        opacity: 0;
-    }
-    25%{
-        opacity: 0;
-    }   
-    50%{
-        
-        opacity: 1;
-    }
-    75%{
-        opacity: 1;
-        
-    }
-    100%{
-        opacity: 1;
-
-    }
-}
-@keyframes change2 {
-    0%{
-        opacity: 1;
-    }
-    25%{
-        opacity: 1;
-    }   
-    50%{
-        
-        position: relative;
-        right: 50px;
-        opacity: 0;
-    }
-    75%{
-        opacity: 0;
-        right: 50px;
-        position: relative;
-        
-    }
-    100%{
-        opacity: 0;
-        right: 50px;
-        position: relative;
-        
-    }
-} */
-
-@media (min-width:1000px) and (max-width:1120px){
+#circle1{
+    border: 1px solid white;
+    width: 10px;
+    height: 10px;
+    padding: 50px;
+    background-color: rgb(136, 136, 187);
+    border-radius: 100%;
+    position: relative;
+    left: 1000px;
+    bottom: 580px;
     
-    #s1,#e1,#a1,#c1{
+}
+#circle2{
+    border: 1px solid white;
+    width: 10px;
+    height: 10px;
+    padding: 20px;
+    background-color: rgb(136, 136, 187);
+    border-radius: 100%;
+    position: relative;
+    left: 780px;
+    bottom: 580px;
+}
+
+.section{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 10px;
+    padding: 10px;
+    position: relative;
+    bottom: 350px;
+}
+img{
+    width: 400px;
+    padding: 20px;
+    height: 400px;
+    background-color: rgb(65, 59, 59);
+    border-radius: 15px;
+    animation-name: back_color;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+}
+@keyframes back_color {
+    0%{
+        background-color: rgb(131, 103, 158);
+    }
+    50%{
+        background-color: rgb(61, 65, 65);
+    }
+    100%{
+        background-color:  rgb(136, 136, 187);
+    }
+}
+section{
+    position: relative;
+    bottom: 300px;   
+}
+.skill,.edu,.achieve{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 30px 10px;
+}
+#skilltitle,#edutitle,#achievetitle{
+    font-weight: bold;
+}
+#skillinfo,#eduinfo,#achieveinfo{
+    font-size: 35px;
+}
+
+@media (min-width:1100px) and (max-width:1200px){
+    img{
+        padding: 18px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 100px;
+        height: 100px;
+        padding: 100px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 700px;
+        bottom: 280px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 900px;
+        bottom: 580px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 680px;
+        bottom: 580px;
+    }
+    body{
+        font-size: 37px;
+    }
+}
+@media (min-width:1000px) and (max-width:1100px){
+    body{
+        font-size: 34px;
+    }
+    img{
+        width: 370px;
+        height: 370px;
+        padding: 16px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 100px;
+        height: 100px;
+        padding: 100px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 600px;
+        bottom: 280px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 800px;
+        bottom: 580px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 580px;
+        bottom: 580px;
+    }
+}
+
+@media (min-width:900px) and (max-width:1000px){
+    body{
         font-size: 30px;
     }
-    #name{
-        font-size: 40px;
+    img{
+        width: 310px;
+        height: 310px;
+        padding: 15px;
     }
-    #work{
-        font-size: 25px;
+    #info{
+        margin: 150px 400px 20px 100px;
     }
-    #a1{
-        margin: 40px 750px 0px 0px;
+    #circle{
+        border: 1px solid white;
+        width: 90px;
+        height: 90px;
+        padding: 90px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 580px;
+        bottom: 245px;
     }
-    #p1{
-        margin: 40px 700px 0px 0px;
-    }
-}
-@media (min-width:950px) and (max-width:1000px){
-    
-    #s1,#e1,#a1,#c1{
-        font-size: 25px;
-    }
-    #name{
-        font-size: 35px;
-    }
-    #work{
-        font-size: 20px;
-    }
-    #a1{
-        margin: 40px 740px 0px 0px;
-    }
-    #p1{
-        margin: 40px 600px 0px 0px;
-    }
-    #e1{
-        margin: 40px 800px 0px 0px;
-    }
-    #s1{
-        margin: 40px 850px 0px 0px;
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 750px;
+        bottom: 525px;
         
     }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 560px;
+        bottom: 550px;
+    }
 }
-@media (min-width:900px) and (max-width:950px){
-    
-    #s1,#e1,#a1,#c1{
-        font-size: 25px;
+@media (min-width:800px) and (max-width:900px){
+    body{
+        font-size: 26px;
     }
-    #name{
-        font-size: 35px;
+    img{
+        width: 280px;
+        height: 280px;
+        padding: 13px;
     }
-    #work{
-        font-size: 20px;
+    #info{
+        margin: 150px 400px 20px 100px;
     }
-    #a1{
-        margin: 40px 740px 0px 0px;
+    #circle{
+        border: 1px solid white;
+        width: 90px;
+        height: 90px;
+        padding: 90px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 510px;
+        bottom: 220px;
     }
-    #p1{
-        margin: 40px 1000000px 0px 0px;
-    }
-    #e1{
-        margin: 40px 800px 0px 0px;
-    }
-    #s1{
-        margin: 40px 800px 0px 0px;
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 680px;
+        bottom: 500px;
         
     }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 490px;
+        bottom: 525px;
+    }
+    
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 23px;
+    }
+    #sec2{
+        text-align: center;
+        padding: 15px 0px;
+    }
 }
+@media (min-width:700px) and (max-width:800px){
+    body{
+        font-size: 22px;
+    }
+    img{
+        width: 250px;
+        height: 250px;
+        padding: 10px;
+    }
+    #info{
+        margin: 150px 400px 20px 100px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 90px;
+        height: 90px;
+        padding: 90px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 420px;
+        bottom: 200px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 590px;
+        bottom: 480px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 400px;
+        bottom: 505px;
+    }
+    #sec2{
+        text-align: center;
+        padding: 30px 0px;
+    }
+    
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 19px;
+    }
+}
+@media (min-width:600px) and (max-width:700px){
+    body{
+        font-size: 19px;
+    }
+    img{
+        width: 220px;
+        height: 220px;
+        padding: 9px;
+    }
+    #info{
+        margin: 150px 400px 20px 100px;
+    }
+    #sec2{
+        text-align: center;
+        padding: 40px 0px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 80px;
+        height: 80px;
+        padding: 80px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 350px;
+        bottom: 200px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 500px;
+        bottom: 450px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 335px;
+        bottom: 505px;
+    }
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 16px;
+    }
+}
+@media (min-width:500px) and (max-width:600px){
+    body{
+        font-size: 16px;
+    }
+    img{
+        width: 200px;
+        height: 200px;
+        padding: 8px;
+    }
+    #info{
+        margin: 150px 400px 20px 100px;
+    }
+    #sec2{
+        text-align: center;
+        padding: 40px 0px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 75px;
+        height: 75px;
+        padding: 75px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 220px;
+        bottom: 200px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 370px;
+        bottom: 440px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 200px;
+        bottom: 470px;
+    }
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 13px;
+    }
+}
+@media (min-width:400px) and (max-width:500px){
+    body{
+        font-size: 13px;
+    }
+    img{
+        width: 190px;
+        height: 190px;
+        padding: 6px;
+    }
+    #info{
+        margin: 80px 400px 20px 70px;
+    }
+    #sec2{
+        text-align: center;
+        padding: 40px 0px;
+    }
+    .section{
+        margin: 50px 0px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 60px;
+        height: 60px;
+        padding: 60px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 190px;
+        bottom: 150px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 30px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 300px;
+        bottom: 350px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 170px;
+        bottom: 360px;
+    }
+    #skilltitle,#edutitle,#achievetitle{
+        font-size: 13px;
+    }
+    
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 10px;
+    }
+    section{
+        position: relative;
+        bottom: 400px;
+    }
+}
+@media (min-width:300px) and (max-width:400px){
+    body{
+        font-size: 10px;
+    }
+    img{
+        width: 100px;
+        height: 100px;
+        padding: 5px;
+        margin: 20px;
+    }
+    #info{
+        margin: 90px 200px 90px 20px;
+    }
+    .section{
+        margin: 60px 0px;
+        padding: 0%;
+    }
+    #sec2{
+        text-align: center;
+        padding: 30px 0px;
+    }
+    #circle{
+        border: 1px solid white;
+        width: 40px;
+        height: 40px;
+        padding: 50px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 155px;
+        bottom: 200px;
+    }
+    #circle1{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 20px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 250px;
+        bottom: 340px;
+        
+    }
+    #circle2{
+        border: 1px solid white;
+        width: 10px;
+        height: 10px;
+        padding: 10px;
+        background-color: rgb(136, 136, 187);
+        border-radius: 100%;
+        position: relative;
+        left: 145px;
+        bottom: 340px;
+    }
+    section{
+        position: relative;
+        bottom: 410px;
+    }
+    #skilltitle,#edutitle,#achievetitle{
+        font-size: 10px;
+    }
+    #achievetitle{
+        margin: 0px 20px 0px 0px;
+        
+    }
+    #skillinfo,#eduinfo,#achieveinfo{
+        font-size: 10px;
+    }
+}
+
