--- a/css/main.css
+++ b/css/main.css
@@ -515,16 +515,22 @@ section{
 }
 @media (min-width:300px) and (max-width:400px){
     body{
-        font-size: 12px;
+        font-size: 13px;
     }
     img{
         width: 100px;
         height: 100px;
         padding: 5px;
         margin: 20px;
+        position: relative;
+        top: 20px;
     }
     #info{
         margin: 90px 200px 90px 20px;
+        /* border: 2px solid black; */
+        position: relative;
+        bottom: 50px;
+        left: 20px;
     }
     .section{
         margin: 60px 0px;
@@ -536,9 +542,9 @@ section{
     }
     #circle{
         border: 1px solid white;
-        width: 40px;
-        height: 40px;
-        padding: 50px;
+        width: 30px;
+        height: 30px;
+        padding: 40px;
         background-color: rgb(136, 136, 187);
         border-radius: 100%;
         position: relative;
@@ -549,24 +555,23 @@ section{
         border: 1px solid white;
         width: 10px;
         height: 10px;
-        padding: 20px;
+        padding: 15px;
         background-color: rgb(136, 136, 187);
         border-radius: 100%;
         position: relative;
-        left: 250px;
-        bottom: 340px;
-        
+        left: 240px;
+        bottom: 300px;   
     }
     #circle2{
         border: 1px solid white;
         width: 10px;
         height: 10px;
-        padding: 10px;
+        padding: 8px;
         background-color: rgb(136, 136, 187);
         border-radius: 100%;
         position: relative;
         left: 145px;
-        bottom: 340px;
+        bottom: 300px;
     }
     section{
         position: relative;
@@ -583,4 +588,3 @@ section{
         font-size: 10px;
     }
 }
-
