--- a/css/main.css
+++ b/css/main.css
@@ -1,673 +1,45 @@
-*{
-    margin: 0%;
-    padding: 0%;
+html{
+    font-size: 100%;
 }
 body{
-    background-color: rgb(136, 136, 187);
-    font-family: 'Akaya Telivigala', cursive;
-    font-size: 40px;
-    box-sizing: border-box;
-    max-width: 100vw;
-    max-height: 100vh;
+    font-size: 1.3rem;
 }
-#info{
-    margin: 200px 500px 0px 100px;
-}
-#circle{
-    border: 1px solid white;
-    width: 100px;
-    height: 100px;
-    padding: 100px;
-    background-color: rgb(136, 136, 187);
-    border-radius: 100%;
-    position: relative;
-    left: 800px;
-    bottom: 280px;
-}
-#circle1{
-    border: 1px solid white;
-    width: 10px;
-    height: 10px;
-    padding: 50px;
-    background-color: rgb(136, 136, 187);
-    border-radius: 100%;
-    position: relative;
-    left: 1000px;
-    bottom: 580px;
-    
-}
-#circle2{
-    border: 1px solid white;
-    width: 10px;
-    height: 10px;
-    padding: 20px;
-    background-color: rgb(136, 136, 187);
-    border-radius: 100%;
-    position: relative;
-    left: 780px;
-    bottom: 580px;
-}
-
-.section{
+.info{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 10px;
-    padding: 10px;
-    position: relative;
-    bottom: 350px;
+    /* border: 2px dotted black; */
 }
-img{
-    width: 400px;
-    padding: 20px;
-    height: 400px;
-    background-color: rgb(65, 59, 59);
-    border-radius: 15px;
-    animation-name: back_color;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: forwards;
-}
-@keyframes back_color {
-    0%{
-        background-color: rgb(131, 103, 158);
-    }
-    50%{
-        background-color: rgb(61, 65, 65);
-    }
-    100%{
-        background-color:  rgb(136, 136, 187);
-    }
-}
-section{
-    position: relative;
-    bottom: 300px;   
-}
-.skill,.edu,.achieve{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin: 30px 10px;
-}
-#skilltitle,#edutitle,#achievetitle{
-    font-weight: bold;
-}
-#skillinfo,#eduinfo,#achieveinfo{
-    font-size: 35px;
+.info > #info1{
+    /* border: 2px dotted black; */
+    text-align: center;
+    padding-top: 5.5rem;
+    padding-bottom: 5.5rem;
+    
 }
 
-@media (min-width:1100px) and (max-width:1200px){
-    img{
-        padding: 18px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 100px;
-        height: 100px;
-        padding: 100px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 700px;
-        bottom: 280px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 900px;
-        bottom: 580px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 680px;
-        bottom: 580px;
-    }
-    body{
-        font-size: 37px;
-    }
-}
-@media (min-width:1000px) and (max-width:1100px){
-    body{
-        font-size: 34px;
-        width: 100vw;
-        height: 100vh;
-    }
-    img{
-        width: 370px;
-        height: 370px;
-        padding: 16px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 100px;
-        height: 100px;
-        padding: 100px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 600px;
-        bottom: 280px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 800px;
-        bottom: 580px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 580px;
-        bottom: 580px;
-    }
+.info > #info2{
+    /* border: 2px dotted black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-@media (min-width:900px) and (max-width:1000px){
-    body{
-        font-size: 30px;
-    }
-    img{
-        width: 310px;
-        height: 310px;
-        padding: 15px;
-    }
-    #info{
-        margin: 150px 400px 20px 100px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 90px;
-        height: 90px;
-        padding: 90px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 580px;
-        bottom: 245px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 750px;
-        bottom: 525px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 560px;
-        bottom: 550px;
-    }
+#info2 > img{
+    border-radius: 100%;
+    width: 20vw;
+    position: relative;
+    height: 20vw;
+    background-color: black;
 }
-@media (min-width:800px) and (max-width:900px){
-    body{
-        font-size: 26px;
-    }
-    img{
-        width: 280px;
-        height: 280px;
-        padding: 13px;
-    }
-    #info{
-        margin: 150px 400px 20px 100px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 90px;
-        height: 90px;
-        padding: 90px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 510px;
-        bottom: 220px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 680px;
-        bottom: 500px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 490px;
-        bottom: 525px;
-    }
-    
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 23px;
-    }
-    #sec2{
-        text-align: center;
-        padding: 15px 0px;
-    }
+
+body{
+    background-color: dimgray;
 }
-@media (min-width:700px) and (max-width:800px){
-    body{
-        font-size: 22px;
-    }
-    img{
-        width: 250px;
-        height: 250px;
-        padding: 10px;
-    }
-    #info{
-        margin: 150px 400px 20px 100px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 90px;
-        height: 90px;
-        padding: 90px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 420px;
-        bottom: 200px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 590px;
-        bottom: 480px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 400px;
-        bottom: 505px;
-    }
-    #sec2{
-        text-align: center;
-        padding: 30px 0px;
-    }
-    
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 19px;
-    }
-}
-@media (min-width:600px) and (max-width:700px){
-    body{
-        font-size: 19px;
-    }
-    img{
-        width: 220px;
-        height: 220px;
-        padding: 9px;
-    }
-    #info{
-        margin: 150px 400px 20px 100px;
-    }
-    #sec2{
-        text-align: center;
-        padding: 40px 0px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 80px;
-        height: 80px;
-        padding: 80px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 350px;
-        bottom: 200px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 500px;
-        bottom: 450px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 335px;
-        bottom: 505px;
-    }
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 16px;
-    }
-}
-@media (min-width:500px) and (max-width:600px){
-    body{
-        font-size: 16px;
-    }
-    img{
-        width: 200px;
-        height: 200px;
-        padding: 8px;
-    }
-    #info{
-        margin: 150px 400px 20px 100px;
-    }
-    #sec2{
-        text-align: center;
-        padding: 40px 0px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 75px;
-        height: 75px;
-        padding: 75px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 220px;
-        bottom: 200px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 50px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 370px;
-        bottom: 440px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 200px;
-        bottom: 470px;
-    }
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 13px;
-    }
-}
-@media (min-width:400px) and (max-width:500px){
-    body{
-        font-size: 13px;
-    }
-    img{
-        width: 140px;
-        height: 140px;
-        padding: 6px;
-        border:  2px solid black;
-        position: relative;
-        top: 20px;
-    }
-    #info{
-        margin: 80px 400px 20px 70px;
-    }
-    #sec2{
-        text-align: center;
-        padding: 40px 0px;
-    }
-    .section{
-        margin: 50px 0px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 60px;
-        height: 60px;
-        padding: 60px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 190px;
-        bottom: 150px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 30px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 300px;
-        bottom: 350px;
-        
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 20px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 170px;
-        bottom: 360px;
-    }
-    #skilltitle,#edutitle,#achievetitle{
-        font-size: 13px;
-    }
-    
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 10px;
-    }
-    section{
-        position: relative;
-        bottom: 400px;
-    }
-}
-@media (min-width:350px) and (max-width:400px){
-    body{
-        font-size: 13px;
-    }
-    img{
-        width: 100px;
-        height: 100px;
-        padding: 5px;
-        margin: 20px;
-        position: relative;
-        top: 25px;
-        left: 20px;
-    }
-    #info{
-        margin: 90px 200px 90px 20px;
-        /* border: 2px solid black; */
-        position: relative;
-        bottom: 50px;
-        left: 15px;
-    }
-    .section{
-        margin: 60px 0px;
-        padding: 0%;
-    }
-    #sec2{
-        /* border: 2px solid black; */
-        /* text-align: center; */
-        padding: 40px 0px 0px 0px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 30px;
-        height: 30px;
-        padding: 40px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 220px;
-        bottom: 200px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 15px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 305px;
-        bottom: 300px;   
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 8px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 210px;
-        bottom: 300px;
-    }
-    section{
-        position: relative;
-        bottom: 410px;
-    }
-    #skilltitle,#edutitle,#achievetitle{
-        font-size: 10px;
-    }
-    #achievetitle{
-        margin: 0px 20px 0px 0px;
-        
-    }
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 10px;
-    }
-}
-@media (min-width:300px) and (max-width:350px){
-    body{
-        font-size: 13px;
-    }
-    img{
-        width: 100px;
-        height: 100px;
-        padding: 5px;
-        margin: 15px;
-        position: relative;
-        top: 25px;
-        left: 20px;
-    }
-    #info{
-        margin: 90px 200px 90px 20px;
-        /* border: 2px solid black; */
-        position: relative;
-        bottom: 50px;
-        left: 15px;
-    }
-    .section{
-        margin: 60px 0px;
-        padding: 0%;
-    }
-    #sec2{
-        padding: 40px 0px 0px 0px;
-    }
-    #circle{
-        border: 1px solid white;
-        width: 30px;
-        height: 30px;
-        padding: 40px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 190px;
-        bottom: 200px;
-    }
-    #circle1{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 15px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 275px;
-        bottom: 300px;   
-    }
-    #circle2{
-        border: 1px solid white;
-        width: 10px;
-        height: 10px;
-        padding: 8px;
-        background-color: rgb(136, 136, 187);
-        border-radius: 100%;
-        position: relative;
-        left: 180px;
-        bottom: 300px;
-    }
-    section{
-        position: relative;
-        bottom: 410px;
-    }
-    #skilltitle,#edutitle,#achievetitle{
-        font-size: 10px;
-    }
-    #achievetitle{
-        margin: 0px 20px 0px 0px;
-        
-    }
-    #skillinfo,#eduinfo,#achieveinfo{
-        font-size: 10px;
+
+@media (min-width:250px) and (max-width:1000px) {
+    html{
+        font-size: 75%;
     }
 }
 
